--- a/index.html
+++ b/index.html
@@ -9,20 +9,37 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <main>
+    <section class="hero">
+      <img src="/assets/images/avatar-christian.jpeg" alt="avatar of Christian Soldevilla">
+      <h1>Christian Soldevilla</h1>
+      <span>Puno, Peru</span>
+      <p>"Front-end developer and avid reader."</p>
+    </section>
+    <section>
+      <ul>
+        <li>
+          <a href="">GitHub</a>
+        </li>
+        <li>
+          <a href="">Frontend Mentor</a>
+        </li>
+        <li>
+          <a href="">LinkedIn</a>
+        </li>
+        <li>
+          <a href="">Twitter</a>
+        </li>
+        <li>
+            <a href="">Website</a>
+        </li>
+      </ul>
+    </section>
+  </main>
 
-  Jessica Randall
-  London, United Kingdom
-  "Front-end developer and avid reader."
-
-  GitHub
-  Frontend Mentor
-  LinkedIn
-  Twitter
-  Instagram
-  
-  <div class="attribution">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    Coded by <a href="#">Christian  Soldevilla</a>.
+  </footer>
 </body>
 </html>
