--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <span>Puno, Peru</span>
       <p>"Front-end developer and avid reader."</p>
     </section>
-    <section>
+    <section class="links-list">
       <ul>
         <li>
           <a href="">GitHub</a>
