--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <img src="/assets/images/avatar-christian.jpeg" alt="avatar of Christian Soldevilla">
       <h1>Christian Soldevilla</h1>
       <span>Puno, Peru</span>
-      <p>"Front-end developer and avid reader."</p>
+      <p>"Front-end developer."</p>
     </section>
     <section class="links-list">
       <ul>
