--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <main>
     <section class="hero">
-      <img src="/assets/images/avatar-christian.webp" loading="lazy" alt="avatar of Christian Soldevilla">
+      <img src="/assets/images/avatar-christian.jpeg" loading="lazy" alt="avatar of Christian Soldevilla">
       <h1>Christian Soldevilla</h1>
       <span>Puno, Peru</span>
       <p>"Front-end developer."</p>
@@ -19,19 +19,19 @@
     <section class="links-list">
       <ul>
         <li>
-          <a href="https://github.com/soldochris">GitHub</a>
+          <a href="https://github.com/soldochris" target="_blank">GitHub</a>
         </li>
         <li>
-          <a href="https://www.frontendmentor.io/profile/soldochris">Frontend Mentor</a>
+          <a href="https://www.frontendmentor.io/profile/soldochris" target="_blank">Frontend Mentor</a>
         </li>
         <li>
-          <a href="https://www.linkedin.com/in/christian-soldevilla/">LinkedIn</a>
+          <a href="https://www.linkedin.com/in/christian-soldevilla/" target="_blank">LinkedIn</a>
         </li>
         <li>
-          <a href="https://x.com/soldevilla_c">Twitter</a>
+          <a href="https://x.com/soldevilla_c" target="_blank">Twitter</a>
         </li>
         <li>
-            <a href="https://christiansoldevilla.tech/?i=1">Website</a>
+            <a href="https://christiansoldevilla.tech/?i=1" target="_blank">Website</a>
         </li>
       </ul>
     </section>
