--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <main>
     <section class="hero">
-      <img src="/assets/images/avatar-christian.jpeg" loading="lazy" alt="avatar of Christian Soldevilla">
+      <img src="./assets/images/avatar-christian.jpeg" loading="lazy" alt="avatar of Christian Soldevilla">
       <h1>Christian Soldevilla</h1>
       <span>Puno, Peru</span>
       <p>"Front-end developer."</p>
